--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav ul a:hover {
   color: var(--green);
 }
 
-nav .social-btns i {
+.social-btns i {
   font-size: 1.3rem;
   cursor: pointer;
   padding: 5px;
@@ -219,159 +219,95 @@ header .header-content a {
   object-fit: cover;
 }
 
-/* Testimonial */
+/* footer */
 
-.testimonial {
-  position: relative;
-  height: 60vh;
-  width: 100%;
-  background-image: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3)
-    ),
-    url(./resourses/testimonial-bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  object-fit: cover;
+.row {
+  display: flex;
+  flex-wrap: wrap;
 }
-
-.site-footer {
-  background-color: #26272b;
-  padding: 45px 0 20px;
-  font-size: 15px;
-  line-height: 24px;
-  color: #737373;
-}
-.site-footer hr {
-  border-top-color: #bbb;
-  opacity: 0.5;
-}
-.site-footer hr.small {
-  margin: 20px 0;
-}
-.site-footer h6 {
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-  margin-top: 5px;
-  letter-spacing: 2px;
-}
-.site-footer a {
-  color: #737373;
-}
-.site-footer a:hover {
-  color: #3366cc;
-  text-decoration: none;
-}
-.footer-links {
-  padding-left: 0;
+ul {
   list-style: none;
 }
-.footer-links li {
-  display: block;
+.footer {
+  background-color: #24262b;
+  padding: 70px 0;
 }
-.footer-links a {
-  color: #737373;
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
 }
-.footer-links a:active,
-.footer-links a:focus,
-.footer-links a:hover {
-  color: #3366cc;
+.footer-col h4 {
+  font-size: 18px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: var(--green);
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
   text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
 }
-.footer-links.inline li {
+.footer-col ul li a:hover {
+  color: #ffffff;
+  padding-left: 8px;
+}
+.footer-col .social-links a {
   display: inline-block;
-}
-.site-footer .social-icons {
-  text-align: right;
-}
-.site-footer .social-icons a {
-  width: 40px;
   height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
   line-height: 40px;
-  margin-left: 6px;
-  margin-right: 0;
-  border-radius: 100%;
-  background-color: #33353d;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
 }
-.copyright-text {
-  margin: 0;
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #ffffff;
 }
-@media (max-width: 991px) {
-  .site-footer [class^="col-"] {
+
+/*responsive*/
+@media only screen and (max-width: 767px) {
+  .footer-col {
+    width: 100%;
     margin-bottom: 30px;
   }
-}
-@media (max-width: 767px) {
-  .site-footer {
-    padding-bottom: 0;
+  .about-us {
+    width: 100%;
+    height: 100vh;
+    margin: 2rem 0;
   }
-  .site-footer .copyright-text,
-  .site-footer .social-icons {
-    text-align: center;
-  }
-}
-.social-icons {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-.social-icons li {
-  display: inline-block;
-  margin-bottom: 4px;
-}
-.social-icons li.title {
-  margin-right: 15px;
-  text-transform: uppercase;
-  color: #96a2b2;
-  font-weight: 700;
-  font-size: 13px;
-}
-.social-icons a {
-  background-color: #eceeef;
-  color: #818a91;
-  font-size: 16px;
-  display: inline-block;
-  line-height: 44px;
-  width: 44px;
-  height: 44px;
-  text-align: center;
-  margin-right: 8px;
-  border-radius: 100%;
-  -webkit-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-.social-icons a:active,
-.social-icons a:focus,
-.social-icons a:hover {
-  color: #fff;
-  background-color: #29aafe;
-}
-.social-icons.size-sm a {
-  line-height: 34px;
-  height: 34px;
-  width: 34px;
-  font-size: 14px;
-}
-.social-icons a.facebook:hover {
-  background-color: #3b5998;
-}
-.social-icons a.twitter:hover {
-  background-color: #00aced;
-}
-.social-icons a.linkedin:hover {
-  background-color: #007bb6;
-}
-.social-icons a.dribbble:hover {
-  background-color: #ea4c89;
-}
-@media (max-width: 767px) {
-  .social-icons li.title {
+  .about-us .rows {
     display: block;
-    margin-right: 0;
-    font-weight: 600;
+    height: 100vh;
+  }
+  .about-us .left-content a {
+    margin-bottom: 1rem;
+  }
+  .about-us .left-content,
+  .about-us .right-img {
+    width: 100%;
   }
 }
