--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,14 @@ nav ul a:hover {
   color: var(--green);
 }
 
+nav .hamburger {
+  display: none;
+}
+
+nav .hamburger .times {
+  display: none;
+}
+
 .social-btns i {
   font-size: 1.3rem;
   cursor: pointer;
@@ -88,7 +96,7 @@ header {
       rgba(0, 0, 0, 0.1),
       rgba(0, 0, 0, 0.7)
     ),
-    url(./resourses/tennis-bg1.jpg);
+    url(/resourses/tennis-bg1.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -284,12 +292,58 @@ ul {
   transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover {
-  color: #24262b;
-  background-color: #ffffff;
+  color: #fff;
+  background-color: var(--green);
 }
 
 /*responsive*/
 @media only screen and (max-width: 767px) {
+  main {
+    width: 100%;
+  }
+  .hidden {
+    display: none;
+  }
+  nav .hamburger {
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    display: block;
+    background-color: var(--green);
+    border: 2px solid #fff;
+    padding: 5px 10px;
+    z-index: 22;
+  }
+  nav .hamburger i {
+    font-size: 1.5rem;
+    color: #fff;
+  }
+  nav ul {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--green);
+    z-index: 22;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  nav ul a {
+    color: #fff;
+    font-size: 1.4rem;
+    width: 150px;
+    margin: 20px 0;
+  }
+  nav ul a:hover {
+    color: #fff;
+  }
+  nav .social-btns {
+    display: none;
+  }
   .footer-col {
     width: 100%;
     margin-bottom: 30px;
