--- a/styles/style.css
+++ b/styles/style.css
@@ -189,14 +189,6 @@ header .header-content a {
   width: 100%;
 }
 
-.Gallery .head h1 {
-  color: var(--green);
-  text-align: center;
-  margin-bottom: 2rem;
-  font-size: 2.5rem;
-  font-weight: 300;
-}
-
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -343,6 +335,10 @@ ul {
   }
   nav .social-btns {
     display: none;
+  }
+  .gallery {
+    width: 100%;
+    height: 100%;
   }
   .footer-col {
     width: 100%;
